graphql_rs_native/src/language/snapshots/tests__fields_definition.snap
---
source: graphql_rs_native/src/language/parser.rs
expression: "fields_definition::<(&str,\n                     ErrorKind)>(&source)(&source.body).unwrap_or_else(|_|\n                                                                           panic!(\"Test failed\"))"
---
[
  "",
  [
    {
      "kind": "FieldDefinition",
      "loc": {
        "start": 2,
        "end": 8
      },
      "description": null,
      "name": {
        "kind": "Name",
        "loc": {
          "start": 2,
          "end": 4
        },
        "value": "id"
      },
      "arguments": null,
      "type": {
        "kind": "NamedType",
        "kind": "NamedType",
        "loc": {
          "start": 6,
          "end": 8
        },
        "name": {
          "kind": "Name",
          "loc": {
            "start": 6,
            "end": 8
          },
          "value": "ID"
        }
      },
      "directives": null
    }
  ]
]
