graphql_rs_native/src/language/snapshots/tests__fields_definition_x.snap
---
source: graphql_rs_native/src/language/parser.rs
expression: "fields_definition::<nom::error::VerboseError<&str>>(&source)(&source.body).unwrap_or_else(|_|\n                                                                                              panic!(\"Test failed\"))"
---
[
  "",
  [
    {
      "kind": "FieldDefinition",
      "loc": {
        "start": 1,
        "end": 4
      },
      "description": null,
      "name": {
        "kind": "Name",
        "loc": {
          "start": 1,
          "end": 2
        },
        "value": "f"
      },
      "arguments": null,
      "type": {
        "kind": "NamedType",
        "kind": "NamedType",
        "loc": {
          "start": 3,
          "end": 4
        },
        "name": {
          "kind": "Name",
          "loc": {
            "start": 3,
            "end": 4
          },
          "value": "S"
        }
      },
      "directives": null
    },
    {
      "kind": "FieldDefinition",
      "loc": {
        "start": 5,
        "end": 8
      },
      "description": null,
      "name": {
        "kind": "Name",
        "loc": {
          "start": 5,
          "end": 6
        },
        "value": "l"
      },
      "arguments": null,
      "type": {
        "kind": "NamedType",
        "kind": "NamedType",
        "loc": {
          "start": 7,
          "end": 8
        },
        "name": {
          "kind": "Name",
          "loc": {
            "start": 7,
            "end": 8
          },
          "value": "S"
        }
      },
      "directives": null
    }
  ]
]
