graphql_rs_native/src/language/snapshots/tests__language::parser::tests::test_definition.snap
---
created: "2019-10-30T03:14:34.874237Z"
creator: insta@0.8.2
source: graphql_rs_native/src/language/parser.rs
expression: "definition::<(&str,\n              ErrorKind)>(&source)(&source.body).unwrap_or_else(|_|\n                                                                    panic!(\"Test failed\"))"
---
[
  "",
  {
    "kind": "TypeSystemDefinition",
    "kind": "SchemaDefinition",
    "kind": "SchemaDefinition",
    "loc": {
      "start": 0,
      "end": 9
    },
    "directives": null,
    "operationTypes": []
  }
]
