graphql_rs_native/src/language/snapshots/tests__language::parser::tests::test_document_1.snap
---
created: "2019-10-30T03:14:34.874281Z"
creator: insta@0.8.2
source: graphql_rs_native/src/language/parser.rs
expression: "document::<nom::error::VerboseError<&str>>(&source).unwrap_or_else(|_|\n                                                                       panic!(\"Test failed\"))"
---
[
  "",
  {
    "kind": "Document",
    "loc": {
      "start": 0,
      "end": 9
    },
    "definitions": [
      {
        "kind": "TypeSystemDefinition",
        "kind": "SchemaDefinition",
        "kind": "SchemaDefinition",
        "loc": {
          "start": 0,
          "end": 9
        },
        "directives": null,
        "operationTypes": []
      }
    ]
  }
]
