graphql_rs_native/src/language/snapshots/tests__language::parser::tests::test_document_2.snap
---
created: "2019-08-11T11:52:34.105678Z"
creator: insta@0.8.2
source: graphql_rs_native/src/language/parser.rs
expression: "document::<(&str,\n            ErrorKind)>(&Source::new(\"\\n    input TestInput {\\n        id: Int!\\n    }\\n\\n    type Author {\\n        id: Int!\\n        firstName: String\\n        lastName: String\\n        posts: [Post]\\n    }\\n\\n    \\\"\\\"\\\"\\n    Block comment\\n    \\\"\\\"\\\"\\n    type Post {\\n        id: Int!\\n        title: String\\n        author: Author\\n        votes: Int\\n    }\\n\\n    # the schema allows the following query:\\n    type Query {\\n        posts: [Post]\\n        author(id: Int!): Author\\n    }\\n\\n    # this schema allows the following mutation:\\n    type Mutation {\\n        upvotePost (\\n        postId: Int!\\n        orderBy: DeploymentOrder = { field: CREATED_AT direction: ASC }\\n        ): Post\\n    }\\n\\n    \\\"\\\"\\\"\\n    Collaborators affiliation level with a subject.\\n    \\\"\\\"\\\"\\n    enum CollaboratorAffiliation {\\n      \\\"\\\"\\\"\\n      All collaborators the authenticated user can see.\\n      \\\"\\\"\\\"\\n      ALL\\n\\n      \\\"\\\"\\\"\\n      All collaborators with permissions to an organization-owned subject, regardless of organization membership status.\\n      \\\"\\\"\\\"\\n      DIRECT\\n\\n      \\\"\\\"\\\"\\n      All outside collaborators of an organization-owned subject.\\n      \\\"\\\"\\\"\\n      OUTSIDE\\n    }\\n            \".to_owned(),\n                                     None,\n                                     None)).unwrap_or_else(|_|\n                                                               panic!(\"Test failed\"))"
---
[
  "",
  {
    "kind": "Document",
    "loc": {
      "start": 5,
      "end": 1093,
      "source": {
        "name": "GraphQL Request",
        "locationOffset": {
          "line": 1,
          "column": 1
        }
      }
    },
    "definitions": [
      {
        "kind": "TypeSystemDefinition",
        "kind": "TypeDefinition",
        "kind": "InputObjectTypeDefinition",
        "kind": "InputObjectTypeDefinition",
        "loc": null,
        "description": null,
        "name": {
          "kind": "Name",
          "loc": null,
          "value": "TestInput"
        },
        "directives": null,
        "fields": [
          {
            "kind": "InputValueDefinition",
            "loc": null,
            "description": null,
            "name": {
              "kind": "Name",
              "loc": null,
              "value": "id"
            },
            "type": {
              "kind": "NonNullType",
              "kind": "NonNullType",
              "loc": null,
              "type": {
                "kind": "NamedType",
                "kind": "NamedType",
                "loc": null,
                "name": {
                  "kind": "Name",
                  "loc": null,
                  "value": "Int"
                }
              }
            },
            "defaultValue": null,
            "directives": null
          }
        ]
      },
      {
        "kind": "TypeSystemDefinition",
        "kind": "TypeDefinition",
        "kind": "ObjectTypeDefinition",
        "kind": "ObjectTypeDefinition",
        "loc": {
          "start": 51,
          "end": 166,
          "source": {
            "name": "GraphQL Request",
            "locationOffset": {
              "line": 1,
              "column": 1
            }
          }
        },
        "description": null,
        "name": {
          "kind": "Name",
          "loc": null,
          "value": "Author"
        },
        "interfaces": null,
        "directives": null,
        "fields": [
          {
            "kind": "FieldDefinition",
            "loc": null,
            "description": null,
            "name": {
              "kind": "Name",
              "loc": null,
              "value": "id"
            },
            "arguments": null,
            "type": {
              "kind": "NonNullType",
              "kind": "NonNullType",
              "loc": null,
              "type": {
                "kind": "NamedType",
                "kind": "NamedType",
                "loc": null,
                "name": {
                  "kind": "Name",
                  "loc": null,
                  "value": "Int"
                }
              }
            },
            "directives": null
          },
          {
            "kind": "FieldDefinition",
            "loc": null,
            "description": null,
            "name": {
              "kind": "Name",
              "loc": null,
              "value": "firstName"
            },
            "arguments": null,
            "type": {
              "kind": "NamedType",
              "kind": "NamedType",
              "loc": null,
              "name": {
                "kind": "Name",
                "loc": null,
                "value": "String"
              }
            },
            "directives": null
          },
          {
            "kind": "FieldDefinition",
            "loc": null,
            "description": null,
            "name": {
              "kind": "Name",
              "loc": null,
              "value": "lastName"
            },
            "arguments": null,
            "type": {
              "kind": "NamedType",
              "kind": "NamedType",
              "loc": null,
              "name": {
                "kind": "Name",
                "loc": null,
                "value": "String"
              }
            },
            "directives": null
          },
          {
            "kind": "FieldDefinition",
            "loc": null,
            "description": null,
            "name": {
              "kind": "Name",
              "loc": null,
              "value": "posts"
            },
            "arguments": null,
            "type": {
              "kind": "ListType",
              "kind": "ListType",
              "loc": null,
              "type": {
                "kind": "NamedType",
                "kind": "NamedType",
                "loc": null,
                "name": {
                  "kind": "Name",
                  "loc": null,
                  "value": "Post"
                }
              }
            },
            "directives": null
          }
        ]
      },
      {
        "kind": "TypeSystemDefinition",
        "kind": "TypeDefinition",
        "kind": "ObjectTypeDefinition",
        "kind": "ObjectTypeDefinition",
        "loc": {
          "start": 166,
          "end": 349,
          "source": {
            "name": "GraphQL Request",
            "locationOffset": {
              "line": 1,
              "column": 1
            }
          }
        },
        "description": {
          "kind": "StringValue",
          "loc": null,
          "value": "\n    Block comment\n    ",
          "block": null
        },
        "name": {
          "kind": "Name",
          "loc": null,
          "value": "Post"
        },
        "interfaces": null,
        "directives": null,
        "fields": [
          {
            "kind": "FieldDefinition",
            "loc": null,
            "description": null,
            "name": {
              "kind": "Name",
              "loc": null,
              "value": "id"
            },
            "arguments": null,
            "type": {
              "kind": "NonNullType",
              "kind": "NonNullType",
              "loc": null,
              "type": {
                "kind": "NamedType",
                "kind": "NamedType",
                "loc": null,
                "name": {
                  "kind": "Name",
                  "loc": null,
                  "value": "Int"
                }
              }
            },
            "directives": null
          },
          {
            "kind": "FieldDefinition",
            "loc": null,
            "description": null,
            "name": {
              "kind": "Name",
              "loc": null,
              "value": "title"
            },
            "arguments": null,
            "type": {
              "kind": "NamedType",
              "kind": "NamedType",
              "loc": null,
              "name": {
                "kind": "Name",
                "loc": null,
                "value": "String"
              }
            },
            "directives": null
          },
          {
            "kind": "FieldDefinition",
            "loc": null,
            "description": null,
            "name": {
              "kind": "Name",
              "loc": null,
              "value": "author"
            },
            "arguments": null,
            "type": {
              "kind": "NamedType",
              "kind": "NamedType",
              "loc": null,
              "name": {
                "kind": "Name",
                "loc": null,
                "value": "Author"
              }
            },
            "directives": null
          },
          {
            "kind": "FieldDefinition",
            "loc": null,
            "description": null,
            "name": {
              "kind": "Name",
              "loc": null,
              "value": "votes"
            },
            "arguments": null,
            "type": {
              "kind": "NamedType",
              "kind": "NamedType",
              "loc": null,
              "name": {
                "kind": "Name",
                "loc": null,
                "value": "Int"
              }
            },
            "directives": null
          }
        ]
      },
      {
        "kind": "TypeSystemDefinition",
        "kind": "TypeDefinition",
        "kind": "ObjectTypeDefinition",
        "kind": "ObjectTypeDefinition",
        "loc": {
          "start": 349,
          "end": 477,
          "source": {
            "name": "GraphQL Request",
            "locationOffset": {
              "line": 1,
              "column": 1
            }
          }
        },
        "description": null,
        "name": {
          "kind": "Name",
          "loc": null,
          "value": "Query"
        },
        "interfaces": null,
        "directives": null,
        "fields": [
          {
            "kind": "FieldDefinition",
            "loc": null,
            "description": null,
            "name": {
              "kind": "Name",
              "loc": null,
              "value": "posts"
            },
            "arguments": null,
            "type": {
              "kind": "ListType",
              "kind": "ListType",
              "loc": null,
              "type": {
                "kind": "NamedType",
                "kind": "NamedType",
                "loc": null,
                "name": {
                  "kind": "Name",
                  "loc": null,
                  "value": "Post"
                }
              }
            },
            "directives": null
          },
          {
            "kind": "FieldDefinition",
            "loc": null,
            "description": null,
            "name": {
              "kind": "Name",
              "loc": null,
              "value": "author"
            },
            "arguments": [
              {
                "kind": "InputValueDefinition",
                "loc": null,
                "description": null,
                "name": {
                  "kind": "Name",
                  "loc": null,
                  "value": "id"
                },
                "type": {
                  "kind": "NonNullType",
                  "kind": "NonNullType",
                  "loc": null,
                  "type": {
                    "kind": "NamedType",
                    "kind": "NamedType",
                    "loc": null,
                    "name": {
                      "kind": "Name",
                      "loc": null,
                      "value": "Int"
                    }
                  }
                },
                "defaultValue": null,
                "directives": null
              }
            ],
            "type": {
              "kind": "NamedType",
              "kind": "NamedType",
              "loc": null,
              "name": {
                "kind": "Name",
                "loc": null,
                "value": "Author"
              }
            },
            "directives": null
          }
        ]
      },
      {
        "kind": "TypeSystemDefinition",
        "kind": "TypeDefinition",
        "kind": "ObjectTypeDefinition",
        "kind": "ObjectTypeDefinition",
        "loc": {
          "start": 477,
          "end": 634,
          "source": {
            "name": "GraphQL Request",
            "locationOffset": {
              "line": 1,
              "column": 1
            }
          }
        },
        "description": null,
        "name": {
          "kind": "Name",
          "loc": null,
          "value": "Mutation"
        },
        "interfaces": null,
        "directives": null,
        "fields": [
          {
            "kind": "FieldDefinition",
            "loc": null,
            "description": null,
            "name": {
              "kind": "Name",
              "loc": null,
              "value": "upvotePost"
            },
            "arguments": [
              {
                "kind": "InputValueDefinition",
                "loc": null,
                "description": null,
                "name": {
                  "kind": "Name",
                  "loc": null,
                  "value": "postId"
                },
                "type": {
                  "kind": "NonNullType",
                  "kind": "NonNullType",
                  "loc": null,
                  "type": {
                    "kind": "NamedType",
                    "kind": "NamedType",
                    "loc": null,
                    "name": {
                      "kind": "Name",
                      "loc": null,
                      "value": "Int"
                    }
                  }
                },
                "defaultValue": null,
                "directives": null
              },
              {
                "kind": "InputValueDefinition",
                "loc": null,
                "description": null,
                "name": {
                  "kind": "Name",
                  "loc": null,
                  "value": "orderBy"
                },
                "type": {
                  "kind": "NamedType",
                  "kind": "NamedType",
                  "loc": null,
                  "name": {
                    "kind": "Name",
                    "loc": null,
                    "value": "DeploymentOrder"
                  }
                },
                "defaultValue": {
                  "kind": "ObjectValue",
                  "kind": "ObjectValue",
                  "loc": null,
                  "fields": [
                    {
                      "kind": "ObjectField",
                      "loc": null,
                      "name": {
                        "kind": "Name",
                        "loc": null,
                        "value": "field"
                      },
                      "value": {
                        "kind": "EnumValue",
                        "kind": "EnumValue",
                        "loc": null,
                        "value": "CREATED_AT"
                      }
                    },
                    {
                      "kind": "ObjectField",
                      "loc": null,
                      "name": {
                        "kind": "Name",
                        "loc": null,
                        "value": "direction"
                      },
                      "value": {
                        "kind": "EnumValue",
                        "kind": "EnumValue",
                        "loc": null,
                        "value": "ASC"
                      }
                    }
                  ]
                },
                "directives": null
              }
            ],
            "type": {
              "kind": "NamedType",
              "kind": "NamedType",
              "loc": null,
              "name": {
                "kind": "Name",
                "loc": null,
                "value": "Post"
              }
            },
            "directives": null
          }
        ]
      },
      {
        "kind": "TypeSystemDefinition",
        "kind": "TypeDefinition",
        "kind": "EnumTypeDefinition",
        "kind": "EnumTypeDefinition",
        "loc": null,
        "description": {
          "kind": "StringValue",
          "loc": null,
          "value": "\n    Collaborators affiliation level with a subject.\n    ",
          "block": null
        },
        "name": {
          "kind": "Name",
          "loc": null,
          "value": "CollaboratorAffiliation"
        },
        "directives": null,
        "values": [
          {
            "kind": "EnumValueDefinition",
            "loc": null,
            "description": {
              "kind": "StringValue",
              "loc": null,
              "value": "\n      All collaborators the authenticated user can see.\n      ",
              "block": null
            },
            "name": {
              "kind": "Name",
              "loc": null,
              "value": "ALL"
            },
            "directives": null
          },
          {
            "kind": "EnumValueDefinition",
            "loc": null,
            "description": {
              "kind": "StringValue",
              "loc": null,
              "value": "\n      All collaborators with permissions to an organization-owned subject, regardless of organization membership status.\n      ",
              "block": null
            },
            "name": {
              "kind": "Name",
              "loc": null,
              "value": "DIRECT"
            },
            "directives": null
          },
          {
            "kind": "EnumValueDefinition",
            "loc": null,
            "description": {
              "kind": "StringValue",
              "loc": null,
              "value": "\n      All outside collaborators of an organization-owned subject.\n      ",
              "block": null
            },
            "name": {
              "kind": "Name",
              "loc": null,
              "value": "OUTSIDE"
            },
            "directives": null
          }
        ]
      }
    ]
  }
]
